--- a/gt.config.json
+++ b/gt.config.json
@@ -1,4 +1,9 @@
 {
   "defaultLocale": "en",
-  "locales": ["es", "fr", "ja", "zh"]
+  "locales": ["es", "fr", "ja", "zh"],
+  "files": {
+    "gt": {
+      "output": "public/_gt/[locale].json"
+    }
+  }
 }
